Remove binaries and unused files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 artigos/*
+
+# See: http://dx.doi.org/10.1016/j.ejor.2017.07.061
+#   M. Fischetti, D. Pisinger,
+#   Optimizing wind farm cable routing considering power losses,
+#   European Journal of Operational Research (2017)
+instances/*
